--- a/template/Template_Factura.html
+++ b/template/Template_Factura.html
@@ -136,7 +136,7 @@
                         &nbsp;&nbsp;<span class="Descripcion1">Obligado a llevar<br>&nbsp;&nbsp;contabilidad:</span>
                     </td>
                     <td>
-                        <span id="obligadoContabilidad">{{obligadoContabilidad}}</span>
+                        <span id="obligadoContabilidad">{{contribuyenteEspecial}}</span>
                     </td>
                 </tr>
 
@@ -183,7 +183,7 @@
                     </td>
 
                     <td>
-                        <span id="razonSocialProveedor">{{secuencial}}</span>
+                        <span id="razonSocialProveedor">{{guiaRemision}}</span>
                     </td>
                 </tr>
 
@@ -193,18 +193,18 @@
                     </td>
 
                     <td>
-                        <span id="razonSocialProveedor">{{dirMatriz}}</span>
+                        <span id="razonSocialProveedor">{{direccionComprador}}</span>
                     </td>
                 </tr>
             </table>
         </td>
     </tr>
 
-    <tr>
+   <!--  <tr>
         <td class="BordesTablas" colspan="2" id="td_exportacion">
         <table id="tbl_exportacion"></table>
         </td>
-    </tr>
+    </tr> -->
 </table>
 
 
@@ -247,8 +247,27 @@
 <table id="ColSub" width="1160" border="0">
     <tr>
         <td style="width: 100%;">
-            <table id="tableformapago"></table>
-
+            <!-- <table id="tableformapago"></table> -->
+            <table align='left' border='0' width='95%' cellspacing='12' class="BordesTablas">
+                <thead>
+                    <tr>
+                        <th>Forma de Pago</th>
+                        <th>Valor</th>
+                        <th>Plazo</th>
+                        <th>Tiempo</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td align="center">{{formaPago}}</td>
+                        <td align="center">{{total}}</td>
+                        <td align="center">{{plazo}}</td>
+                        <td align="center">{{unidadTiempo}}</td>
+                        
+                    </tr>
+                    
+                </tbody>
+            </table>
         </td>
 
         <td rowspan="2" valign="top">
@@ -258,7 +277,7 @@
                         <span class="Descripcion1">SUBTOTAL 12%</span>
                     </td>
                     <td align="right" style="width:115px;">
-                        <span id="SUBTOTAL12P">{{baseImponible}}</span>
+                        <span id="SUBTOTAL12P">{{baseImponible12}}</span>
                     </td>
                 </tr>
                 <tr>
@@ -266,7 +285,7 @@
                         <span class="Descripcion1">SUBTOTAL 0%</span>
                     </td>
                     <td align="right">
-                        <span id="SUBTOTAL0P">{{baseImponible}}</span>
+                        <span id="SUBTOTAL0P">{{baseImponible0}}</span>
                     </td>
                 </tr>
                 <tr>
@@ -274,7 +293,7 @@
                         <span class="Descripcion1">SUBTOTAL NO OBJETO DE IVA </span>
                     </td>
                     <td align="right">
-                        <span id="SUBTOTALNOOBJETODEIVA">{{baseImponible}}</span>
+                        <span id="SUBTOTALNOOBJETODEIVA">{{noobjetoiva}}</span>
                     </td>
                 </tr>
                 <tr>
@@ -282,7 +301,7 @@
                         <span class="Descripcion1">SUBTOTAL EXENTO DE IVA</span>
                     </td>
                     <td align="right">
-                        <span id="SUBTOTALEXENTODEIVA">{{baseImponible}}</span>
+                        <span id="SUBTOTALEXENTODEIVA">{{excentoiva}}</span>
                     </td>
                 </tr>
                 <tr>
@@ -290,7 +309,7 @@
                         <span class="Descripcion1">SUBTOTAL SIN IMPUESTOS</span>
                     </td>
                     <td align="right">
-                        <span id="SUBTOTALSINIMPUESTOS">{{baseImponible}}</span>
+                        <span id="SUBTOTALSINIMPUESTOS">{{totalSinImpuestos}}</span>
                     </td>
                 </tr>
                 <tr>
@@ -306,7 +325,7 @@
                         <span class="Descripcion1">ICE</span>
                     </td>
                     <td align="right">
-                        <span id="ICE">{{totalSinImpuestos}}</span>
+                        <span id="ICE">{{ice}}</span>
                     </td>
                 </tr>
                 <tr>
@@ -322,7 +341,7 @@
                         <span class="Descripcion1">IRBPNR</span>
                     </td>
                     <td align="right">
-                        <span id="IRBPNR">{{valor}}</span>
+                        <span id="IRBPNR">{{irbpnr}}</span>
                     </td>
                 </tr>
                 <tr>
@@ -342,28 +361,23 @@
 
     <tr>
         <td>
-            <table align='left' border='0' width='95%' cellspacing='12' class="BordesTablas">
-                <thead>
-                    <tr>
-                        <th>Forma de Pago</th>
-                        <th>Valor</th>
-                        <th>Plazo</th>
-                        <th>Tiempo</th>
-                    </tr>
-                </thead>
+            <table align='left' border='0' width='95%' cellspacing='3' class="BordesTablas">	
+                <tr>
+                    <th colspan="2">Informacion Adicional</th>
+                </tr>
                 <tbody>
+                    {{#each datosinfoadicional}}
                     <tr>
-                        <td align="center">{{formaPago}}</td>
-                        <td align="right">{{total}}</td>
-                        <td align="right">{{plazo}}</td>
-                        <td align="right">{{unidadTiempo}}</td>
-                        
+                        <td width="195" height="27" class="Descripcion1"> {{this.campo}}</td>
+                        <td>{{this.valorcampo}}</td>
                     </tr>
-                    
+                    {{/each}}
                 </tbody>
             </table>
-            
         </td>
 
     </tr>
+    
 </table>
+
+       
