Se Procedió a realizar el cambio que muestra el tipo de agente de retención en la variable cadenaagenteretencion

--- a/template/Template_Factura.html
+++ b/template/Template_Factura.html
@@ -139,10 +139,13 @@
                         <span id="obligadoContabilidad">{{obligadoContabilidad}}</span>
                     </td>
                 </tr>
-
                 <tr>
                     <td colspan="2" align="center">
-                        <!-- <br>&nbsp;&nbsp;<span class="Descripcion1"></span> -->
+                        <br>&nbsp;&nbsp;<span class="Descripcion1">{{cadenaAgenteRetencion}}</span>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2" align="center">
                         <br>&nbsp;&nbsp;<span class="Descripcion1">{{contribuyenteRimpe}}</span>
                     </td>
                 </tr>
